WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
79937
Crash at -[WebFrame(WebInternal) _setTypingStyle:withUndoAction:]
https://bugs.webkit.org/show_bug.cgi?id=79937
Summary
Crash at -[WebFrame(WebInternal) _setTypingStyle:withUndoAction:]
Enrica Casucci
Reported
2012-02-29 13:24:50 PST
This crash can be hit when the passed typing style is NULL. Mail on OS X passes a null value when increasing the quote level. <
rdar://problem/10942936
>
Attachments
Patch
(1.28 KB, patch)
2012-02-29 13:27 PST
,
Enrica Casucci
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2012-02-29 13:26:26 PST
So we're missing null check somewhere?
Enrica Casucci
Comment 2
2012-02-29 13:27:20 PST
Created
attachment 129504
[details]
Patch This patch has been reviewed in person by Dan Bernstein.
Enrica Casucci
Comment 3
2012-02-29 13:28:15 PST
http://trac.webkit.org/changeset/109254
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug