Crash at -[WebFrame(WebInternal) _setTypingStyle:withUndoAction:] https://bugs.webkit.org/show_bug.cgi?id=79937 <rdar://problem/10942936>

Reviewed by Dan Bernstein.

* WebView/WebFrame.mm:
(-[WebFrame _setTypingStyle:withUndoAction:]): Adding a null check.



Canonical link: https://commits.webkit.org/97008@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@109254 268f45cc-cd09-0410-ab3c-d52691b4dbfc